--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,6 +1,6 @@
 name: Materializer
-version: 1.3.0
-description: "Loads the Materialize Framework assets for any plugin/theme that needs it"
+version: 1.3.1
+description: "Loads the Materialize Framework assets for any plug-in and/or theme that needs it"
 icon: google
 author:
   name: Bob Rockefeller
@@ -8,7 +8,7 @@ author:
   url: http://www.bobrockefeller.com
 homepage: https://github.com/bobrocke/grav-plugin-materializer
 demo: http://materialize.bobrockefeller.com/
-keywords: materialize, css, plugin, framework
+keywords: materialize, css, plugin, framework, material design
 bugs: https://github.com/bobrocke/grav-plugin-materializer/issues
 license: MIT
 
@@ -17,9 +17,39 @@ form:
   fields:
     enabled:
       type: toggle
-      label: Plugin status
+      label: Plugin Status
+      highlight: 1
+      default: 1
+      options:
+        1: Enabled
+        0: Disabled
+      validate:
+        type: bool
+    always_load:
+      type: toggle
+      label: Always Load
       highlight: 1
       default: 0
+      options:
+        1: Enabled
+        0: Disabled
+      validate:
+        type: bool
+    load_css:
+      type: toggle
+      label: Load Materialize CSS
+      highlight: 1
+      default: 1
+      options:
+        1: Enabled
+        0: Disabled
+      validate:
+        type: bool
+    load_js:
+      type: toggle
+      label: Load Materialize JS
+      highlight: 1
+      default: 1
       options:
         1: Enabled
         0: Disabled
